Last commit at deacon place
Added information from the diagram before taking it down off my wall.

--- a/Pulsas/Pulsas/Base.lproj/Main.storyboard
+++ b/Pulsas/Pulsas/Base.lproj/Main.storyboard
@@ -183,8 +183,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="JRj-oY-hAY"/>
-        <segue reference="Q9j-j3-c0X"/>
+        <segue reference="234-WA-9f0"/>
+        <segue reference="u5s-pt-uzU"/>
         <segue reference="OGm-Cr-S1I"/>
     </inferredMetricsTieBreakers>
 </document>
