--- a/Pulsas/Pulsas/Base.lproj/Main.storyboard
+++ b/Pulsas/Pulsas/Base.lproj/Main.storyboard
@@ -23,33 +23,37 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o5c-PL-d8u">
-                                <rect key="frame" x="61" y="318" width="39" height="64"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="Yes"/>
-                                <connections>
-                                    <action selector="posRepsonse:" destination="sWT-Jf-xbD" eventType="touchUpInside" id="eIL-HV-Das"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MaZ-9q-LSw">
-                                <rect key="frame" x="205" y="318" width="119" height="64"/>
+                                <rect key="frame" x="222" y="318" width="119" height="64"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="No"/>
+                                <state key="normal" title="No">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="negResponse:" destination="sWT-Jf-xbD" eventType="touchUpInside" id="t6p-dy-6YN"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o5c-PL-d8u">
+                                <rect key="frame" x="75" y="318" width="39" height="64"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Yes">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="posRepsonse:" destination="sWT-Jf-xbD" eventType="touchUpInside" id="eIL-HV-Das"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.53888585629999997" green="0.82876795759999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="OLD-iC-5vK" firstAttribute="bottom" secondItem="MaZ-9q-LSw" secondAttribute="bottom" constant="285" id="4Op-As-8H4"/>
                             <constraint firstItem="OLD-iC-5vK" firstAttribute="trailing" secondItem="7ug-IP-JXG" secondAttribute="trailing" constant="16" id="6Rl-OO-ceK"/>
-                            <constraint firstItem="OLD-iC-5vK" firstAttribute="trailing" secondItem="MaZ-9q-LSw" secondAttribute="trailing" constant="51" id="7S4-Ep-yKG"/>
+                            <constraint firstItem="OLD-iC-5vK" firstAttribute="trailing" secondItem="MaZ-9q-LSw" secondAttribute="trailing" constant="34" id="7S4-Ep-yKG"/>
                             <constraint firstItem="OLD-iC-5vK" firstAttribute="bottom" secondItem="o5c-PL-d8u" secondAttribute="bottom" constant="285" id="DiI-EH-VJa"/>
-                            <constraint firstItem="o5c-PL-d8u" firstAttribute="leading" secondItem="OLD-iC-5vK" secondAttribute="leading" constant="61" id="RLr-6Q-F9V"/>
+                            <constraint firstItem="o5c-PL-d8u" firstAttribute="leading" secondItem="OLD-iC-5vK" secondAttribute="leading" constant="75" id="RLr-6Q-F9V"/>
                             <constraint firstItem="MaZ-9q-LSw" firstAttribute="top" secondItem="7ug-IP-JXG" secondAttribute="bottom" constant="179" id="ZSX-sU-Btm"/>
                             <constraint firstItem="o5c-PL-d8u" firstAttribute="top" secondItem="7ug-IP-JXG" secondAttribute="bottom" constant="179" id="egd-eQ-6PL"/>
-                            <constraint firstItem="MaZ-9q-LSw" firstAttribute="leading" secondItem="o5c-PL-d8u" secondAttribute="trailing" constant="105" id="k8H-k8-uCZ"/>
+                            <constraint firstItem="MaZ-9q-LSw" firstAttribute="leading" secondItem="o5c-PL-d8u" secondAttribute="trailing" constant="108" id="k8H-k8-uCZ"/>
                             <constraint firstItem="7ug-IP-JXG" firstAttribute="leading" secondItem="OLD-iC-5vK" secondAttribute="leading" constant="16" id="lDO-im-ftl"/>
                             <constraint firstItem="7ug-IP-JXG" firstAttribute="top" secondItem="OLD-iC-5vK" secondAttribute="top" constant="21" id="nwN-gI-1Tc"/>
                             <constraint firstItem="OLD-iC-5vK" firstAttribute="bottom" secondItem="7ug-IP-JXG" secondAttribute="bottom" constant="528" id="x6T-Mf-L9L"/>
@@ -81,17 +85,21 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ecy-QX-fYN">
-                                <rect key="frame" x="61" y="318" width="39" height="64"/>
+                                <rect key="frame" x="73" y="318" width="39" height="64"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="Yes"/>
+                                <state key="normal" title="Yes">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="posRepsonse:" destination="wUV-1U-jQo" eventType="touchUpInside" id="xvF-8T-hvN"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IJq-0u-8ND">
-                                <rect key="frame" x="205" y="318" width="119" height="64"/>
+                                <rect key="frame" x="224" y="318" width="119" height="64"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="No"/>
+                                <state key="normal" title="No">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="negResponse:" destination="wUV-1U-jQo" eventType="touchUpInside" id="anr-KS-s3K"/>
                                 </connections>
@@ -101,28 +109,30 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="X9X-aB-n1x"/>
                                 </constraints>
-                                <state key="normal" title="Not sure"/>
+                                <state key="normal" title="Not sure">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="axiomButton:" destination="wUV-1U-jQo" eventType="touchUpInside" id="L9Z-3Y-8bc"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.53888585629999997" green="0.82876795759999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="lJP-LK-AB4" firstAttribute="leading" secondItem="Ecy-QX-fYN" secondAttribute="leading" id="3lD-GC-yKO"/>
-                            <constraint firstItem="IJq-0u-8ND" firstAttribute="leading" secondItem="Ecy-QX-fYN" secondAttribute="trailing" constant="105" id="8Ee-JZ-Ngk"/>
+                            <constraint firstItem="lJP-LK-AB4" firstAttribute="leading" secondItem="Ecy-QX-fYN" secondAttribute="leading" constant="-12" id="3lD-GC-yKO"/>
+                            <constraint firstItem="IJq-0u-8ND" firstAttribute="leading" secondItem="Ecy-QX-fYN" secondAttribute="trailing" constant="112" id="8Ee-JZ-Ngk"/>
                             <constraint firstItem="CJc-VA-JzW" firstAttribute="top" secondItem="9o6-CD-6zh" secondAttribute="top" constant="21" id="UBY-mJ-rbQ"/>
                             <constraint firstAttribute="bottom" secondItem="lJP-LK-AB4" secondAttribute="bottom" constant="20" symbolic="YES" id="WI7-yB-9oo"/>
                             <constraint firstItem="9o6-CD-6zh" firstAttribute="bottom" secondItem="CJc-VA-JzW" secondAttribute="bottom" constant="528" id="anC-yV-Woe"/>
-                            <constraint firstItem="Ecy-QX-fYN" firstAttribute="leading" secondItem="9o6-CD-6zh" secondAttribute="leading" constant="61" id="g9c-Wx-Tno"/>
+                            <constraint firstItem="Ecy-QX-fYN" firstAttribute="leading" secondItem="9o6-CD-6zh" secondAttribute="leading" constant="73" id="g9c-Wx-Tno"/>
                             <constraint firstItem="9o6-CD-6zh" firstAttribute="bottom" secondItem="Ecy-QX-fYN" secondAttribute="bottom" constant="285" id="hB3-r6-wbr"/>
                             <constraint firstItem="CJc-VA-JzW" firstAttribute="leading" secondItem="9o6-CD-6zh" secondAttribute="leading" constant="16" id="sdB-bs-AAX"/>
                             <constraint firstItem="IJq-0u-8ND" firstAttribute="top" secondItem="CJc-VA-JzW" secondAttribute="bottom" constant="179" id="ttP-C7-QZn"/>
                             <constraint firstItem="Ecy-QX-fYN" firstAttribute="top" secondItem="CJc-VA-JzW" secondAttribute="bottom" constant="179" id="wFg-IX-k6D"/>
                             <constraint firstItem="9o6-CD-6zh" firstAttribute="bottom" secondItem="IJq-0u-8ND" secondAttribute="bottom" constant="285" id="xes-g3-d4h"/>
                             <constraint firstItem="9o6-CD-6zh" firstAttribute="trailing" secondItem="CJc-VA-JzW" secondAttribute="trailing" constant="16" id="y6v-ys-2QP"/>
-                            <constraint firstItem="9o6-CD-6zh" firstAttribute="trailing" secondItem="IJq-0u-8ND" secondAttribute="trailing" constant="51" id="zBv-5W-Bh1"/>
-                            <constraint firstItem="lJP-LK-AB4" firstAttribute="trailing" secondItem="IJq-0u-8ND" secondAttribute="trailing" id="zde-FE-MNo"/>
+                            <constraint firstItem="9o6-CD-6zh" firstAttribute="trailing" secondItem="IJq-0u-8ND" secondAttribute="trailing" constant="32" id="zBv-5W-Bh1"/>
+                            <constraint firstItem="lJP-LK-AB4" firstAttribute="trailing" secondItem="IJq-0u-8ND" secondAttribute="trailing" constant="-19" id="zde-FE-MNo"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9o6-CD-6zh"/>
                     </view>
@@ -144,7 +154,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6k-Eb-YJs">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="15" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6k-Eb-YJs">
                                 <rect key="frame" x="16" y="41" width="343" height="534"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -152,13 +162,15 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ztt-Vc-6sh">
                                 <rect key="frame" x="61" y="583" width="263" height="64"/>
-                                <state key="normal" title="Back"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="backButton:" destination="7k6-4K-5YJ" eventType="touchUpInside" id="qQQ-DY-EKy"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.53888585629999997" green="0.82876795759999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="J6k-Eb-YJs" firstAttribute="leading" secondItem="d9G-xO-hGi" secondAttribute="leading" constant="16" id="35u-uZ-tfL"/>
                             <constraint firstItem="d9G-xO-hGi" firstAttribute="bottom" secondItem="J6k-Eb-YJs" secondAttribute="bottom" constant="92" id="D3b-O4-uav"/>
@@ -183,8 +195,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="234-WA-9f0"/>
-        <segue reference="u5s-pt-uzU"/>
+        <segue reference="JRj-oY-hAY"/>
+        <segue reference="Q9j-j3-c0X"/>
         <segue reference="OGm-Cr-S1I"/>
     </inferredMetricsTieBreakers>
 </document>
