--- a/Pulsas/Pulsas/Base.lproj/Main.storyboard
+++ b/Pulsas/Pulsas/Base.lproj/Main.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3yT-tB-GWs">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3yT-tB-GWs">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,13 +11,13 @@
         <!--YesNoSimple-->
         <scene sceneID="mpD-M2-2pz">
             <objects>
-                <viewController title="YesNoSimple" id="sWT-Jf-xbD" customClass="ViewController" customModule="Pulsas" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="YesNoSimple" modalPresentationStyle="fullScreen" id="sWT-Jf-xbD" customClass="ViewController" customModule="Pulsas" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Far-28-Wze">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ug-IP-JXG">
-                                <rect key="frame" x="16" y="41" width="343" height="98"/>
+                                <rect key="frame" x="16" y="21" width="343" height="98"/>
                                 <color key="backgroundColor" red="0.53888585629999997" green="0.82876795759999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="98" id="CpJ-Cl-gwl"/>
@@ -34,7 +33,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MaZ-9q-LSw">
-                                <rect key="frame" x="250" y="318" width="74" height="42"/>
+                                <rect key="frame" x="250" y="298" width="74" height="42"/>
                                 <color key="backgroundColor" red="0.76091608850000003" green="0.9101283469" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="L8p-h5-FAm"/>
@@ -54,7 +53,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o5c-PL-d8u">
-                                <rect key="frame" x="61" y="318" width="74" height="42"/>
+                                <rect key="frame" x="61" y="298" width="74" height="42"/>
                                 <color key="backgroundColor" red="0.76091608850000003" green="0.9101283469" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="74" id="MZn-n3-MW5"/>
@@ -102,13 +101,13 @@
         <!--YesNoNotSure-->
         <scene sceneID="twQ-Yj-HPW">
             <objects>
-                <viewController title="YesNoNotSure" id="wUV-1U-jQo" customClass="ViewController" customModule="Pulsas" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="YesNoNotSure" modalPresentationStyle="fullScreen" id="wUV-1U-jQo" customClass="ViewController" customModule="Pulsas" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4ee-Kc-06m">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CJc-VA-JzW">
-                                <rect key="frame" x="16" y="41" width="343" height="98"/>
+                                <rect key="frame" x="16" y="21" width="343" height="118"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -200,18 +199,18 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qsg-nz-zcT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2501.5999999999999" y="-286.50674662668666"/>
+            <point key="canvasLocation" x="2108" y="122"/>
         </scene>
         <!--Display-->
         <scene sceneID="gsu-OR-wCJ">
             <objects>
-                <viewController title="Display" id="7k6-4K-5YJ" customClass="ViewController" customModule="Pulsas" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Display" modalPresentationStyle="fullScreen" id="7k6-4K-5YJ" customClass="ViewController" customModule="Pulsas" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Yxm-Tb-XwH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="15" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6k-Eb-YJs">
-                                <rect key="frame" x="16" y="41" width="343" height="534"/>
+                                <rect key="frame" x="16" y="21" width="343" height="554"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -219,6 +218,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ztt-Vc-6sh">
                                 <rect key="frame" x="61" y="583" width="263" height="64"/>
                                 <color key="backgroundColor" red="0.76091608850000003" green="0.9101283469" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Ztt-Vc-6sh" secondAttribute="height" multiplier="263:64" id="slZ-ND-3TU"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Back">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -239,10 +241,14 @@
                             <constraint firstItem="d9G-xO-hGi" firstAttribute="bottom" secondItem="J6k-Eb-YJs" secondAttribute="bottom" constant="92" id="D3b-O4-uav"/>
                             <constraint firstAttribute="bottom" secondItem="Ztt-Vc-6sh" secondAttribute="bottom" constant="20" symbolic="YES" id="FPy-Sx-4of"/>
                             <constraint firstItem="Ztt-Vc-6sh" firstAttribute="top" secondItem="J6k-Eb-YJs" secondAttribute="bottom" constant="8" symbolic="YES" id="KL6-Dd-wHs"/>
+                            <constraint firstItem="d9G-xO-hGi" firstAttribute="bottom" secondItem="Ztt-Vc-6sh" secondAttribute="bottom" constant="20" id="Pwp-xE-cpy"/>
                             <constraint firstItem="Ztt-Vc-6sh" firstAttribute="leading" secondItem="d9G-xO-hGi" secondAttribute="leading" constant="61" id="R0D-Xq-1lW"/>
+                            <constraint firstItem="d9G-xO-hGi" firstAttribute="trailing" secondItem="Ztt-Vc-6sh" secondAttribute="trailing" constant="51" id="Xze-p5-h2n"/>
                             <constraint firstItem="d9G-xO-hGi" firstAttribute="trailing" secondItem="Ztt-Vc-6sh" secondAttribute="trailing" constant="51" id="dWq-jG-Uu4"/>
+                            <constraint firstItem="Ztt-Vc-6sh" firstAttribute="leading" secondItem="d9G-xO-hGi" secondAttribute="leading" constant="61" id="hhf-0v-24v"/>
                             <constraint firstItem="d9G-xO-hGi" firstAttribute="trailing" secondItem="J6k-Eb-YJs" secondAttribute="trailing" constant="16" id="iPG-nX-Kg3"/>
                             <constraint firstItem="J6k-Eb-YJs" firstAttribute="top" secondItem="d9G-xO-hGi" secondAttribute="top" constant="21" id="kcv-mY-fHF"/>
+                            <constraint firstItem="Ztt-Vc-6sh" firstAttribute="top" secondItem="J6k-Eb-YJs" secondAttribute="bottom" constant="8" id="mUq-P6-tcX"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="d9G-xO-hGi"/>
                     </view>
@@ -259,13 +265,13 @@
         <!--View Controller-->
         <scene sceneID="R0Q-lM-KqW">
             <objects>
-                <viewController id="3yT-tB-GWs" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="3yT-tB-GWs" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SLy-9N-p2t">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4g6-XT-OPl">
-                                <rect key="frame" x="138" y="312" width="99" height="43"/>
+                                <rect key="frame" x="138" y="312.5" width="99" height="42"/>
                                 <color key="backgroundColor" red="0.76091608850000003" green="0.9101283469" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Continue">
@@ -298,7 +304,6 @@
                         </subviews>
                         <color key="backgroundColor" red="0.53888585629999997" green="0.82876795759999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="4g6-XT-OPl" firstAttribute="top" secondItem="Lgk-5f-Vu1" secondAttribute="top" constant="292" id="I3P-JO-F8K"/>
                             <constraint firstAttribute="bottom" secondItem="ajr-8a-QAH" secondAttribute="bottom" constant="20" symbolic="YES" id="IZr-rO-czN"/>
                             <constraint firstItem="4g6-XT-OPl" firstAttribute="centerY" secondItem="SLy-9N-p2t" secondAttribute="centerY" id="UsC-KC-JQy"/>
                             <constraint firstItem="4g6-XT-OPl" firstAttribute="centerX" secondItem="SLy-9N-p2t" secondAttribute="centerX" id="bRt-ZS-4g4"/>
@@ -315,15 +320,17 @@
         <!--View Controller-->
         <scene sceneID="LON-vd-VaS">
             <objects>
-                <viewController id="b3f-sk-T5L" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="b3f-sk-T5L" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TPk-Rn-E9e">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q18-8C-d6n">
-                                <rect key="frame" x="61" y="583" width="263" height="64"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q18-8C-d6n">
+                                <rect key="frame" x="61" y="583" width="263" height="42"/>
                                 <color key="backgroundColor" red="0.76091608850000003" green="0.9101283469" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="q18-8C-d6n" secondAttribute="height" multiplier="263:42" id="3lc-0Q-iFF"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Home">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -337,15 +344,27 @@
                                     <segue destination="3yT-tB-GWs" kind="showDetail" animates="NO" id="h78-aw-3xr"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Feel free to contact us with any comments, questions, or suggestions at pulsasdev@gmail.com." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2yb-KI-w71">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feel free to contact us with any comments, questions, or suggestions at pulsasdev@gmail.com." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2yb-KI-w71">
                                 <rect key="frame" x="16" y="265" width="343" height="83"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="2yb-KI-w71" secondAttribute="height" multiplier="343:83" id="KTx-Yz-Lro"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.53888585629999997" green="0.82876795759999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="Uei-dK-hXh" firstAttribute="trailing" secondItem="2yb-KI-w71" secondAttribute="trailing" constant="16" id="0dc-TE-ZST"/>
+                            <constraint firstItem="q18-8C-d6n" firstAttribute="top" secondItem="2yb-KI-w71" secondAttribute="bottom" constant="235" id="3xV-8G-3sg"/>
+                            <constraint firstItem="2yb-KI-w71" firstAttribute="leading" secondItem="Uei-dK-hXh" secondAttribute="leading" constant="16" id="BVt-oR-kP6"/>
+                            <constraint firstItem="q18-8C-d6n" firstAttribute="top" secondItem="2yb-KI-w71" secondAttribute="bottom" constant="235" id="GwR-o9-7tz"/>
+                            <constraint firstItem="Uei-dK-hXh" firstAttribute="trailing" secondItem="q18-8C-d6n" secondAttribute="trailing" constant="51" id="JeT-h7-b8W"/>
+                            <constraint firstItem="2yb-KI-w71" firstAttribute="top" secondItem="Uei-dK-hXh" secondAttribute="top" constant="265" id="jFY-ee-qS2"/>
+                            <constraint firstItem="Uei-dK-hXh" firstAttribute="bottom" secondItem="q18-8C-d6n" secondAttribute="bottom" constant="42" id="sIj-aV-C9M"/>
+                            <constraint firstItem="q18-8C-d6n" firstAttribute="leading" secondItem="Uei-dK-hXh" secondAttribute="leading" constant="61" id="v1Y-9K-FYi"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Uei-dK-hXh"/>
                     </view>
                 </viewController>
